--- a/src/Maic/BlogBundle/Resources/views/Blog/voir.html.twig
+++ b/src/Maic/BlogBundle/Resources/views/Blog/voir.html.twig
@@ -34,6 +34,20 @@
             </p>
         </footer>
     </blockquote>
+    <div class="row">
+        <div class="col-lg-2">
+        </div>
+        <div class="col-lg-7">
+            <a href="{{ path('maic_blog_modifier', {id:article.id}) }}" 
+               class="btn btn-primary" role="button">Modifier</a>
+            <a href="{{ path('maic_blog_supprimer', {id:article.id}) }}" 
+               class="btn btn-primary" role="button">Supprimer</a>
+            <a href="{{ path('maic_blog_homepage', {page:1}) }}" 
+               class="btn btn-primary" role="button">Accueil</a>
+        </div>
+        <div class="col-lg-3">
+        </div>
+    </div>
     {% if article.commentaires is not empty %}
         <h3>
             <span class="glyphicon glyphicon-pushpin"></span> Commentaires
