--- a/src/Maic/BlogBundle/Resources/views/Blog/menu.html.twig
+++ b/src/Maic/BlogBundle/Resources/views/Blog/menu.html.twig
@@ -8,7 +8,7 @@
                     <div class="panel panel-info">
                         <div class="panel-heading">
                             <h5 class="panel-title">
-                                <a href="{{ path('maic_blog_voir', {id:article.id}) }}">{{ article.titre }}</a>
+                                <a href="{{ path('maic_blog_voir_slug', {slug:article.slug}) }}">{{ article.titre }}</a>
                             </h5>
                         </div>
                         <div class="panel-body">
