--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -46,7 +46,7 @@
             <script src="{{ asset('js/bootstrap.min.js') }}"></script>
         {% endblock %}
         <footer>
-            <p class='text-right text-danger small'>Made in China</p>
+            <p class="label label-danger">Made in China</p>
         </footer>
     </body>
 </html>
